--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "~react-vis/dist/style.css";
+
 body {
   margin: 0;
   padding: 0;
@@ -17,3 +19,4 @@ code {
   margin-top: 60px !important;
   text-align: center;
 }
+
