--- a/src/components/applications/application-info/InfoDisplay.css
+++ b/src/components/applications/application-info/InfoDisplay.css
@@ -1,3 +1,7 @@
 .code-area {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.info-table {
+    margin-bottom: 50px !important;
+}
