--- a/src/components/new/new.css
+++ b/src/components/new/new.css
@@ -3,15 +3,38 @@
 }
 
 .network-input-wrapper {
-    display: block !important;
-}
-
-.network-input {
-    padding-left: 50px;
-    display: inline-block !important;
+    display: flex;
+    align-items: center;
     margin-top: 15px !important;
 }
 
+.network-input {
+    flex-grow: 1;
+}
+
 .delete-network {
+    margin-left: 10px !important;
+}
+
+.comp-form {
+    margin-top: 10px;
+    padding: 10px;
+    border: solid 1px lightgray;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    flex-grow: 1;
+}
+
+.add-button {
+    margin-left: 10px !important;
+}
+
+.comp-wrapper {
+    display: flex;
+    align-items: center;
+}
+
+.delete-component {
     margin-left: 10px !important;
 }
