--- a/src/components/new/new.css
+++ b/src/components/new/new.css
@@ -82,3 +82,11 @@
 .new-form label {
     display: inline-block !important;
 }
+
+.file-form {
+    padding: 20px;
+}
+.file-form button {
+    display: block !important;
+    margin-top: 10px !important;
+}
