--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,3 @@
-@import '@fontsource/public-sans';
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.page-header {
-  margin-top: 30px !important;
-  text-align: center;
-}
-
-.ui.left.sidebar {
-  width: inherit !important;
-}
-
-.overview-card {
-  margin: 50px auto 50px auto !important;
-  padding: 10px 0px 10px 0px !important;
-}
-
-.overview-card:hover {
-  box-shadow: 0 2px 3px 0 #a5a5a5,0 0 0 2px #a5a5a5 !important;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
